--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: petclinic
-        image: sevenajay/petclinic7:latest
+        image: akki0594/petmail:latest
         ports:
         - containerPort: 8080
         imagePullPolicy: Always
